Page 2. Header, article, comments without hover

--- a/index2.html
+++ b/index2.html
@@ -13,32 +13,143 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
+  <header class="header header--bg-article">
+    <div class="container">
+      <nav class="nav">
+          <div class="logo">
+            <a class="link-logo" href="#">
+              <img src="img/logo.png" alt="logo">
+            </a>
+          </div>
+          <ul class="menu">
+            <li class="menu__item">
+              <a class="menu__link" href="#articles">Статьи</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#about">Обо мне</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#portfolio">Портфолио</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#feedback">Написать мне</a>
+            </li>
+          </ul>
+      </nav >
+    </div>
+  </header>
   <main>
-    <header class="header header--bg-article">
-      <div class="container">
-        <nav class="nav">
-            <div class="logo">
-              <a class="link-logo" href="#">
-                <img src="img/logo.png" alt="logo">
+    <div class="container">
+      <article class="article">
+        <div class="row">
+          <div class="col-10">
+            <h1 class="title article__title">Как себя мотивировать</h1>
+            <p class="tegs-date">
+              <span class="tegs">Теги: путешествия, друзья</span>
+              <time class="date">29.09.2020</time>
+            </p>
+            <div class="article__content">
+              <p>
+                Расскажу о биопсихологической теории личности Джеффри Грея, которая помогла мне разобраться в работе мотивационных стимулов. Узнала я о ней из книги «Воля и самоконтроль. Как гены и мозг мешают нам бороться с соблазнами» Ирины Якутенко.
+              </p>
+              <p>
+                Согласно этой теории, человеческое поведение контролируют две системы: BAS (Behavior Activation System) и BIS (Behavior Inhibition System), каждая из них обусловлена генетически. Грей использовал её для понимания того, как вознаграждение или наказание связаны с беспокойством и импульсивностью. Самое интересное, что активность этих систем у людей различна. Зная, какая из них доминирует, можно понять, какие стимулы использовать для эффективной мотивации.
+              </p>
+              <figure class="figure">
+                <img src="img/page-article/img-article.jpg" alt="">
+                <figcaption class="figcaption">Моё поведение регулируется больше BAS, поэтому при планировании целей я всегда использую позитивный стимул.</figcaption>
+              </figure>
+              <p>
+                BAS (Behavior Activation System) работает на ощущение позитивных эмоций. Мотивация людей, чье поведение в основном определяется этой системой, направлена на получение вознаграждения. Они стремятся получить одобрение и награду за свои действия. Такие люди более мотивированы в учебе и развитии разных навыков. Однако носители активной BAS склонны к импульсивности и желанию немедленного вознаграждения, что может мешать долгосрочной работе. </br> BIS (Behavior Inhibition System) ответственна за избегающее поведение. Люди с этой активной системой мотивируются стремлением избежать проблем. Они более чувствительны к наказанию и новому опыту, а также стремятся избежать ситуаций, когда чувствуют, что могут потерпеть неудачу.
+              </p>
+              <p>
+                Определив, к какому типу относится поведение, вы узнаете, какие стимулы использовать для достижения поставленной цели. Например, я решила выучить английский — само изучение не является целью, поэтому нужно правильно её сформулировать. Если моё поведение регулируется BAS, мне нужно выбрать своей конечной целью какую-то награду: например, если я выучу английский, то смогу смотреть фильмы в оригинале. Если же я склонна к BIS поведению, целью нужно выбрать избежание проблем: если я заговорю на английском, то не потеряюсь в новой стране. И это можно использовать в различных сферах жизни.
+              </p>
+            </div>
+            <div class="block-share">
+              <div class="block-like">
+                <a class="block-like__like" href="#">
+                  <img  src="img/page-article/like.png">
+                </a>
+                <span class="block-like__amount">16</span>
+              </div>
+              <ul class="share-list">
+                <li class="share-list__item">
+                  <a class="share-list__link" href="https://twitter.com/">
+                    <img src="img/page-article/twitter.png">
+                  </a>
+                </li>
+                <li>
+                  <a class="share-list__link" href="https://twitter.com/">
+                    <img src="img/page-article/facebook.png">
+                  </a>
+                </li>
+                <li>
+                  <a class="share-list__link" href="https://twitter.com/">
+                    <img src="img/page-article/vk.png">
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="block-advice">
+              <a class="block-advice__link"  href="">
+                Ко всем статьям
+                <div class="arrow block-advice__arrow">
+                </div>  
               </a>
             </div>
-            <ul class="menu">
-              <li class="menu__item">
-                <a class="menu__link" href="#articles">Статьи</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#about">Обо мне</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#portfolio">Портфолио</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#feedback">Написать мне</a>
-              </li>
+          </div>
+        </div>
+      </article>
+      <section class="section-comment">
+        <div class="row">
+          <div class="col-8">
+            <ul class="comments-list">
+                <li class="comments-list__item">
+                  <div class="comments-list__user">
+                    <img class="comments-list__foto" src="img/page-article/us_1.png">
+                    <span class="comments-list__name">Иван Петров</span>
+                  </div>
+                  <p class="comments-list__content">
+                    Отличная статья! Спасибо.
+                  </p>
+                </li>
+                <li class="comments-list__item">
+                  <div class="comments-list__user">
+                    <img class="comments-list__foto" src="img/page-article/us_2.png">
+                    <span class="comments-list__name">Ксения Ксения</span>
+                  </div>
+                  <p class="comments-list__content">
+                    Отличный текст, добавила в закладки.
+                  </p>
+                </li>
+                <li class="comments-list__item">
+                  <div class="comments-list__user">
+                    <img class="comments-list__foto" src="img/page-article/us_3.png">
+                    <span class="comments-list__name">Иван Иванов</span>
+                  </div>
+                  <p class="comments-list__content">
+                    Основательный материал! Можешь посоветовать какие-то книги на эту тему?
+                  </p>
+                </li>
             </ul>
-        </nav >
-      </div>
-    </header>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-8">
+            <div class="feedback">
+              <h2 class="feedback__title">Оставить комментарий</h2>
+              <form class="feedback__form form-comment">
+                  <input class="form-comment__field" id="name" name="name" type="text" minlength="10" value="" placeholder="Имя" required>
+                  <input class="form-comment__field" id="email" name="email" type="text" minlength="10" value="" placeholder="Почта">
+                  <button class="btn btn--primary form-comment__btn">Отправить</button>
+                  <textarea class="form-comment__field form-comment__field--message" id="message"  name="message" maxlength="200" value="" placeholder="Напишите здесь ваше сообщение."></textarea>
+              </form>
+            </div>
+          </div>    
+        </div>
+      </section>
+    </div>
   </main>
   <footer class="footer">
     <div class="container">
