--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                   Летний месяц я провела в столице Германии вместе с друзьями. И вот как это было!
                   </p>
                   <div class="wrapper">
-                    <span class="article-preview__teg">Теги: путешествия</span>
-                    <span class="article-preview__date">29.09.2020</span>
+                    <span class="tegs">Теги: путешествия</span>
+                    <span class="date">29.09.2020</span>
                   </div>
                 </div>
               </a>
@@ -83,8 +83,8 @@
                     Собрала для вас список любимых кофеен, где подают лучший летний напиток.
                   </p>
                   <div class="wrapper">
-                    <span class="article-preview__teg">Теги: город</span>
-                    <span class="article-preview__date">24.07.2020</span>
+                    <span class="tegs">Теги: город</span>
+                    <span class="date">24.07.2020</span>
                   </div>
                 </div>
               </a>
@@ -99,8 +99,8 @@
                     Рассказываю о прочитанных за последнее время книгах: фавориты и провалы.
                   </p>
                   <div class="wrapper">
-                    <span class="article-preview__teg">Теги: книги</span>
-                    <span class="article-preview__date">29.09.2020</span>
+                    <span class="tegs">Теги: книги</span>
+                    <span class="date">29.09.2020</span>
                   </div>
                 </div>
               </a>
@@ -119,8 +119,8 @@
                     Поделилась с вами весенними фотографиями, и секретами удачных снимков.
                   </p>
                   <div class="wrapper">
-                    <span class="article-preview__teg light-text">Теги: фотографии</span>
-                    <span class="article-preview__date light-text">29.06.2020</span>
+                    <span class="tegs tegs--light">Теги: фотографии</span>
+                    <span class="date date--light">29.06.2020</span>
                   </div>
                 </div>
               </a>
@@ -135,8 +135,8 @@
                     Что может быть лучше чизкейка с сезонными ягодами? Только домашний чизкейк!
                   </p>
                   <div class="wrapper">
-                    <span class="article-preview__teg light-text">Теги: рецепты</span>
-                    <span class="article-preview__date light-text">24.06.2020</span>
+                    <span class="tegs tegs--light">Теги: рецепты</span>
+                    <span class="date date--light">24.06.2020</span>
                   </div>
                 </div>
               </a>
@@ -234,17 +234,17 @@
         <div class="row">
           <div class="col-10 col-offset-1">
             <form class="form-contact">
-              <div class="form-contact__field">
+              <div class="form-contact__group">
                 <label class="form-contact__caption" for="fullname">Ваше имя</label>
-                <input id="fullname" class="form-contact__input" name="fullname" type="text" minlength="10" value="" required>
+                <input id="fullname" class="form-contact__field" name="fullname" type="text" minlength="10" value="" required>
               </div>
-              <div class="form-contact__field">
+              <div class="form-contact__group">
                 <label class="form-contact__caption" for="email">Email</label>
-                <input id="email" class="form-contact__input" name="email" type="text" minlength="10" value="" required>
+                <input id="email" class="form-contact__field" name="email" type="text" minlength="10" value="" required>
               </div>
-              <div class="form-contact__field form-contact__field--big">
+              <div class="form-contact__group form-contact__group--big">
                 <label class="form-contact__caption" for="message">Сообщение</label>
-                <textarea id="message" class="form-contact__input form-contact__input--message" name="message" maxlength="200" value="" placeholder="Напишите здесь ваше сообщение."></textarea>
+                <textarea id="message" class="form-contact__field form-contact__field--message" name="message" maxlength="200" value="" placeholder="Напишите здесь ваше сообщение."></textarea>
               </div>
               <button class="btn btn--primary">Отправить</button>
             </form>
